--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,15 +5,9 @@ import Projects from '../components/Projects.astro'
 import Skills from '../components/Skills.astro'
 import Experience from '../components/Experience.astro'
 import Contact from '../components/Contact.astro'
-
-import 'aos/dist/aos.css'
 ---
 
-<Layout
-  title="Luis Gomez Dev | Portafolio"
-  ,
-  description="Bienvenidos a mi portafolio. Soy Luis Gómez, desarrollador web con más de cuatro años de experiencia en el diseño, desarrollo y mantenimiento de aplicaciones web."
->
+<Layout title="Luis Gomez Dev | Portafolio">
   <Hero id="inicio" />
   <Experience id="experiencia" />
   <Projects id="proyectos" />
