--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -13,17 +13,15 @@ import MailIcon from '../assets/icons/MailIcon.astro'
     class="duration-300 mx-auto max-w-7xl w-full text-black flex items-center py-2 md:py-5 justify-between h-auto transition-all md:px-3"
   >
     <a
-      href="#inicio"
+      href="/"
       class="w-8 flex items-center gap-2 font-bold transition-transform duration-300 hover:scale-110"
     >
       <img src="/logo_personal.webp" alt="Logo Luis Gomez Dev" />
       <span class="text-2xl tracking-wide text-black">LGDev.</span>
     </a>
 
-    <!-- Menú Hamburguesa -->
     <button id="menuToggle" class="md:hidden text-3xl z-50 relative"> ☰ </button>
 
-    <!-- Menú Desktop -->
     <ul class="hidden md:flex items-center gap-x-7 sm:gap-x-12 text-black">
       <li>
         <a href="#experiencia" class="group relative flex gap-2 items-center">
@@ -63,7 +61,6 @@ import MailIcon from '../assets/icons/MailIcon.astro'
       </li>
     </ul>
 
-    <!-- Menú Mobile -->
     <div
       id="mobileMenu"
       class="fixed top-0 right-0 w-full h-screen bg-white/95 text-black flex flex-col items-center justify-center gap-8 text-2xl font-medium transform translate-x-full transition-transform duration-500 md:hidden z-40 backdrop-blur-3xl"
@@ -81,6 +78,7 @@ import MailIcon from '../assets/icons/MailIcon.astro'
     const nav = document.querySelector('header')
     const menu = document.getElementById('mobileMenu')
     const toggle = document.getElementById('menuToggle')
+    const desktopMenu = document.querySelector('nav ul')
 
     window.addEventListener('scroll', () => {
       if (window.scrollY > 50) {
