--- a/src/pages/proyectos/index.astro
+++ b/src/pages/proyectos/index.astro
@@ -47,7 +47,7 @@ import { PROJECTS } from '../../data/projects'
                 <div class="flex items-center flex-wrap gap-2 mb-2 mt-4">
                   {project.technologies.map((tech) => (
                     <span
-                      class={`inline-block text-xs font-medium px-3 py-1 mr-2 mb-2 rounded-full border ${tech.color} border-current bg-white/80 backdrop-blur-sm`}
+                      class={`inline-block text-xs font-medium px-3 py-1 mr-2 mb-2 border ${tech.color} border-current bg-white/80 backdrop-blur-sm`}
                     >
                       {tech.name}
                     </span>
