Refactor experience and projects images

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import LinkedIn from '../assets/icons/LinkedIn.astro'
 import ButtonLink from './shared/ButtonLink.astro'
 ---
 
-<footer class="bg-white dark:bg-[#111] text-gray-800 dark:text-white py-8">
+<footer class="bg-[#111] text-white py-8">
   <div class="flex justify-between max-w-6xl mx-auto items-center px-3 xl:px-0">
     <p class="text-sm text-gray-300">
       © {new Date().getFullYear()} Luis Gómez Dev.
