--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -5,7 +5,12 @@ import { SKILLS } from '../data/skills'
 const { id } = Astro.props
 ---
 
-<Section title="Habilidades" id={id} subtitle="Tecnologías y herramientas que manejo">
+<Section
+  title="Habilidades"
+  id={id}
+  subtitle="Tecnologías y herramientas que manejo"
+  class="bg-[#EEE]"
+>
   <div class="py-8 px-3 max-w-6xl mx-auto">
     <div class="grid grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-8">
       {
