--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@ import EmailIcon from '../assets/icons/EmailIcon.astro'
 import AngularIcon from '../assets/icons/AngularIcon.astro'
 import TypeScriptIcon from '../assets/icons/TypeScriptIcon.astro'
 import SpringIcon from '../assets/icons/SpringIcon.astro'
-import VueIcon from '../assets/icons/VueIcon.astro'
+import JavaScriptIcon from '../assets/icons/JavaScriptIcon.astro'
 
 import ButtonLink from './shared/ButtonLink.astro'
 
@@ -100,13 +100,13 @@ const { id } = Astro.props
           ><SpringIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
         >
       </div>
-      <span
+      <div
         class="absolute bottom-8 sm:bottom-10 right-10 sm:right-12 w-12 h-12 sm:w-16 sm:h-16 bg-gray-800 text-white dark:bg-white dark:text-gray-800 dark:border rounded-full drop-shadow-2xl shadow-lg dark:shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
       >
-        <span class="group-hover:text-[#42b883] transition-all duration-300"
-          ><VueIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
+        <span class="group-hover:text-[#F7DF1E] transition-all duration-300"
+          ><JavaScriptIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
         >
-      </span>
+      </div>
     </div>
   </header>
 </section>
