--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -13,7 +13,7 @@ import MailIcon from '../assets/icons/MailIcon.astro'
     class="duration-300 mx-auto max-w-7xl w-full text-black flex items-center py-2 md:py-5 justify-between h-auto transition-all md:px-3"
   >
     <a
-      href="/"
+      href="#inicio"
       class="w-8 flex items-center gap-2 font-bold transition-transform duration-300 hover:scale-110"
     >
       <img src="/logo_personal.webp" alt="Logo Luis Gomez Dev" />
