--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -14,7 +14,6 @@ const { id } = Astro.props
   title="Proyectos"
   id={id}
   subtitle="Algunos de los proyectos que he colaborado y desarrollado"
-  class="bg-[#EEE]"
 >
   <div class="lg:py-8 px-4 lg:px-6 max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-12">
     {
@@ -24,7 +23,7 @@ const { id } = Astro.props
             <article class="flex flex-col gap-x-12 gap-y-5 border bg-white/40 border-gray-300 rounded-xl overflow-hidden shadow">
               <div class="">
                 <img
-                  class="w-full h-40 md:h-52 object-cover hover:scale-105 transition-all duration-300"
+                  class="w-full object-cover"
                   src={project.image}
                   alt={project.title}
                   loading="lazy"
@@ -78,16 +77,5 @@ const { id } = Astro.props
           )
       )
     }
-  </div>
-  <div class="w-full flex items-center justify-center mt-12">
-    <ButtonLink
-      href="/proyectos"
-      title="Ver todos los proyectos"
-      target=""
-      class="text-white border-red-800 bg-red-800 px-4"
-    >
-      <WebIcon color="#FFF" size={20} />
-      Ver todos
-    </ButtonLink>
   </div>
 </Section>
