--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -13,14 +13,14 @@ const { id } = Astro.props
 <Section
   title="Proyectos"
   id={id}
-  subtitle="Algunos de los proyectos que he colaborado y desarrollado"
+  subtitle="Algunos de los proyectos que he desarrollado como enfoque personal y profesional"
 >
   <div class="lg:py-8 px-4 lg:px-6 max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-12">
     {
       PROJECTS.map(
         (project, index) =>
           project.home && (
-            <article class="flex flex-col gap-x-12 gap-y-5 border bg-white/40 border-gray-300 rounded-xl overflow-hidden shadow">
+            <article class="flex flex-col gap-x-12 gap-y-5 border bg-white/40 border-gray-300 rounded-xl overflow-hidden shadow py-3">
               <div class="">
                 <img
                   class="w-full object-cover"
@@ -36,21 +36,18 @@ const { id } = Astro.props
                     {project.experience}
                   </span>
                 </div>
-                <h3 class="text-2xl font-bold mb-2 text-red-800">{project.title}</h3>
+                <h1 class="text-2xl font-bold mb-2 text-red-800">{project.title}</h1>
                 <div class="flex-1">
                   <p class="text-base opacity-80">{project.description}</p>
-                  <div class="flex items-center flex-wrap gap-2 mb-2 mt-4">
+                  <h2 class="text-black text-lg my-4 font-semibold">Tecnologías utilizadas</h2>
+                  <div class="flex flex-wrap gap-3">
                     {project.technologies.map((tech) => (
-                      <span
-                        class={`inline-block text-xs font-medium px-3 py-0.5 mr-2 mb-2 ${tech.color} rounded-full bg-white/80 backdrop-blur-sm`}
-                      >
-                        {tech.name}
-                      </span>
+                      <img src={tech} class="w-8 object-contain" alt="" />
                     ))}
                   </div>
                 </div>
 
-                <div class="flex items-center gap-4 mt-4">
+                <div class="flex items-center gap-4 mt-8">
                   {project.live && (
                     <ButtonLink
                       href={project.live}
