--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -80,28 +80,28 @@ const { id } = Astro.props
         />
       </div>
       <div
-        class="absolute top-6 left-8 sm:left-20 w-12 h-12 sm:w-16 sm:h-16 bg-gray-800 dark:bg-white dark:text-gray-800 dark:border rounded-full drop-shadow-2xl shadow-lg dark:shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
+        class="absolute top-6 left-8 sm:left-20 w-12 h-12 sm:w-16 sm:h-16 bg-white text-gray-800 border rounded-full drop-shadow-2xl shadow-lg shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
       >
         <span class="group-hover:text-red-700 transition-all duration-300"
           ><AngularIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
         >
       </div>
       <div
-        class="absolute top-12 right-8 md:right-12 w-12 h-12 sm:w-16 sm:h-16 bg-gray-800 text-white dark:bg-white dark:text-gray-800 dark:border rounded-full drop-shadow-2xl shadow-lg dark:shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
+        class="absolute top-12 right-8 md:right-12 w-12 h-12 sm:w-16 sm:h-16 bg-white text-gray-800 border rounded-full drop-shadow-2xl shadow-lg shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
       >
         <span class="group-hover:text-blue-700 transition-all duration-300"
           ><TypeScriptIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
         >
       </div>
       <div
-        class="absolute bottom-0 left-8 sm:left-20 w-12 h-12 sm:w-16 sm:h-16 bg-gray-800 text-white dark:bg-white dark:text-gray-800 dark:border rounded-full drop-shadow-2xl shadow-lg dark:shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
+        class="absolute bottom-0 left-8 sm:left-20 w-12 h-12 sm:w-16 sm:h-16 bg-white text-gray-800 border rounded-full drop-shadow-2xl shadow-lg shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
       >
         <span class="group-hover:text-green-600 transition-all duration-300"
           ><SpringIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
         >
       </div>
       <div
-        class="absolute bottom-8 sm:bottom-10 right-10 sm:right-12 w-12 h-12 sm:w-16 sm:h-16 bg-gray-800 text-white dark:bg-white dark:text-gray-800 dark:border rounded-full drop-shadow-2xl shadow-lg dark:shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
+        class="absolute bottom-8 sm:bottom-10 right-10 sm:right-12 w-12 h-12 sm:w-16 sm:h-16 bg-white text-gray-800 border rounded-full drop-shadow-2xl shadow-lg shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
       >
         <span class="group-hover:text-[#F7DF1E] transition-all duration-300"
           ><JavaScriptIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
