--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -20,12 +20,12 @@ const { id } = Astro.props
     <div class="flex flex-col gap-6">
       <div>
         <span class="text-xl opacity-80 uppercase font-semibold">Hola, soy</span>
-        <h1 class="text-6xl lg:text-8xl font-bold text-gray-800 dark:text-red-800 tracking-tighter">
+        <h1 class="text-6xl lg:text-8xl font-bold text-red-800 tracking-tighter">
           Luis Gómez
         </h1>
       </div>
       <h2 class="text-2xl lg:text-3xl font-semibold flex items-center">
-        <span class="typing-text text-black">&lt;Desarrollador FullStack/&gt;</span>
+        <span class="typing-text text-black">Desarrollador Web</span>
       </h2>
       <p
         class="text-lg text-pretty text-gray-800 opacity-80 dark:text-black leading-relaxed max-w-lg"
