--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -8,7 +8,7 @@ const { id } = Astro.props
 
 <Section title="Experiencia" id={id} class="bg-[#EEE]">
   <div class="lg:py-8 px-4 lg:px-6 max-w-6xl mx-auto">
-    <div class="flex justify-between items-center flex-wrap gap-x-24 gap-y-8">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-x-24 gap-y-8">
       <div class="flex flex-col gap-4 max-w-3xl">
         <h2 class="text-2xl font-bold">Desarrollador Full-Stack</h2>
         <p class="text-base opacity-80">Zabud Technologies | 2019 - 2024</p>
@@ -32,70 +32,68 @@ const { id } = Astro.props
           </li>
         </ul>
       </div>
-      <picture class="hidden md:flex justify-center items-center w-full lg:w-auto flex-1">
-        <img
-          class="size-64 object-cover rounded shadow"
-          loading="lazy"
-          src="/images/zabud.webp"
-          alt="Logo Zabud"
-        />
-      </picture>
-    </div>
-    <div class="mt-12">
-      <h2 class="text-xl font-semibold mb-8">
-        Algunos de los proyectos en los que participé como desarrollador
-      </h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-4">
-        <div class="relative group cursor-pointer" data-open-modal="modal-aldea">
-          <img
-            class="w-full h-40 object-cover rounded-lg shadow transition duration-300 group-hover:blur-sm"
-            src="/projects_images/icon/aldea.webp"
-            alt="Proyecto Aldea"
-          />
-          <div
-            class="absolute inset-0 bg-black/60 flex items-center justify-center rounded-lg opacity-0 group-hover:opacity-100 transition duration-300"
-          >
-            <span class="text-white font-semibold text-lg">Ver información del proyecto</span>
+      <div>
+        <h2 class="text-xl font-semibold mb-8">
+          Algunos de los proyectos en los que participé como desarrollador
+        </h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-4">
+          <div class="relative group cursor-pointer" data-open-modal="modal-aldea">
+            <img
+              class="w-full h-28 object-cover rounded-lg shadow transition duration-300 group-hover:blur-sm"
+              src="/projects_images/icon/aldea.webp"
+              alt="Proyecto Aldea"
+            />
+            <div
+              class="absolute inset-0 bg-black/60 flex items-center justify-center rounded-lg opacity-0 group-hover:opacity-100 px-5 transition duration-300"
+            >
+              <span class="text-white font-semibold text-base text-center"
+                >Ver información del proyecto</span
+              >
+            </div>
           </div>
-        </div>
-        <div class="relative group cursor-pointer" data-open-modal="modal-tronos">
-          <img
-            class="w-full h-40 object-cover rounded-lg shadow transition duration-300 group-hover:blur-sm"
-            src="/projects_images/icon/tronos.webp"
-            alt="Proyecto Tronos"
-          />
-          <div
-            class="absolute inset-0 bg-black/60 flex items-center justify-center rounded-lg opacity-0 group-hover:opacity-100 transition duration-300"
-          >
-            <span class="text-white font-semibold text-lg">Ver información del proyecto</span>
+          <div class="relative group cursor-pointer" data-open-modal="modal-tronos">
+            <img
+              class="w-full h-28 object-cover rounded-lg shadow transition duration-300 group-hover:blur-sm"
+              src="/projects_images/icon/tronos.webp"
+              alt="Proyecto Tronos"
+            />
+            <div
+              class="absolute inset-0 bg-black/60 flex items-center justify-center rounded-lg opacity-0 group-hover:opacity-100 px-5 transition duration-300"
+            >
+              <span class="text-white font-semibold text-base text-center"
+                >Ver información del proyecto</span
+              >
+            </div>
           </div>
-        </div>
-        <div class="relative group cursor-pointer" data-open-modal="modal-zonaser">
-          <img
-            class="w-full h-40 object-cover rounded-lg shadow transition duration-300 group-hover:blur-sm"
-            src="/projects_images/icon/zonaser.webp"
-            alt="Proyecto Zonaser"
-          />
-          <div
-            class="absolute inset-0 bg-black/60 flex items-center justify-center rounded-lg opacity-0 group-hover:opacity-100 transition duration-300"
-          >
-            <span class="text-white font-semibold text-lg">Ver información del proyecto</span>
+          <div class="relative group cursor-pointer" data-open-modal="modal-zonaser">
+            <img
+              class="w-full h-28 object-cover rounded-lg shadow transition duration-300 group-hover:blur-sm"
+              src="/projects_images/icon/zonaser.webp"
+              alt="Proyecto Zonaser"
+            />
+            <div
+              class="absolute inset-0 bg-black/60 flex items-center justify-center rounded-lg opacity-0 group-hover:opacity-100 px-5 transition duration-300"
+            >
+              <span class="text-white font-semibold text-base text-center"
+                >Ver información del proyecto</span
+              >
+            </div>
           </div>
+          {
+            PROJECTS_EXPERIENCE.map((project) => (
+              <Modal id={`modal-${project.id}`} title={project.title}>
+                <h2 class="text-black text-lg mb-3 font-semibold">Descripción y Funciones</h2>
+                <p class="text-base text-pretty">{project.description}</p>
+                <h2 class="text-black text-lg my-4 font-semibold">Tecnologías utilizadas</h2>
+                <div class="flex flex-wrap gap-5">
+                  {project.technologies.map((tech) => (
+                    <img src={tech} class="w-8 object-contain" alt="" />
+                  ))}
+                </div>
+              </Modal>
+            ))
+          }
         </div>
-        {
-          PROJECTS_EXPERIENCE.map((project) => (
-            <Modal id={`modal-${project.id}`} title={project.title}>
-              <h2 class="text-black text-lg mb-3 font-semibold">Descripción y Funciones</h2>
-              <p class="text-base text-pretty">{project.description}</p>
-              <h2 class="text-black text-lg my-4 font-semibold">Tecnologías utilizadas</h2>
-              <div class="flex flex-wrap gap-5">
-                {project.technologies.map((tech) => (
-                  <img src={tech} class="w-8 object-contain" alt="" />
-                ))}
-              </div>
-            </Modal>
-          ))
-        }
       </div>
     </div>
   </div>
