--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -17,15 +17,12 @@ const { id } = Astro.props
   <header
     class="max-w-7xl mx-auto px-4 lg:px-6 py-12 grid md:grid-cols-2 gap-x-12 gap-y-10 items-center h-auto md:h-screen"
   >
-    <div class="flex flex-col gap-6">
+    <div class="flex flex-col gap-6 text-center md:text-left animate-fade-in-left">
       <div>
         <span class="text-xl opacity-80 uppercase font-semibold">Hola, soy</span>
-        <h1 class="text-6xl lg:text-8xl font-bold text-red-800 tracking-tighter">
-          Luis Gómez
-        </h1>
+        <h1 class="text-6xl lg:text-8xl font-bold text-red-800 tracking-tighter">Luis Gómez</h1>
       </div>
-      <h2 class="text-2xl lg:text-3xl font-semibold flex items-center">
-        <span class="typing-text text-black">Desarrollador Web</span>
+      <h2 class="text-2xl lg:text-3xl font-semibold typing-text text-black">Desarrollador Web
       </h2>
       <p
         class="text-lg text-pretty text-gray-800 opacity-80 dark:text-black leading-relaxed max-w-lg"
@@ -33,8 +30,8 @@ const { id } = Astro.props
         Ingeniero de sistemas con más de cuatro años de experiencia en el diseño, desarrollo y
         mantenimiento de aplicaciones web modernas.
       </p>
-      <div class="flex items-center space-x-4">
-        <span class="text-gray-800 dark:text-black font-medium">Sígueme por:</span>
+      <div class="flex items-center space-x-4 justify-center md:justify-start">
+        <span class="text-gray-800 dark:text-black font-medium hidden md:block">Sígueme por:</span>
         <div class="flex space-x-3">
           <ButtonLink
             href="https://github.com/luisgomezadev"
@@ -50,9 +47,24 @@ const { id } = Astro.props
           >
             <LinkedIn class="w-6 h-6" />
           </ButtonLink>
+          <ButtonLink
+            href="mailto:luisgomez24g@gmail.com"
+            title="Enviar correo a Luis Gomez"
+            class="text-white bg-black block md:hidden"
+          >
+            <EmailIcon class="w-6 h-6" />
+          </ButtonLink>
+          <ButtonLink
+            title="Descargar CV de Luis Gomez"
+            class="bg-transparent border-2 border-black text-black px-4 block md:hidden"
+            href="/files/CV_Luis_Gomez_2025.pdf"
+          >
+            <CvIcon color="#000" size={20} />
+            Descargar mi CV
+          </ButtonLink>
         </div>
       </div>
-      <div class="flex items-center gap-4 mt-4">
+      <div class="md:flex items-center gap-4 mt-4 hidden">
         <ButtonLink
           href="mailto:luisgomez24g@gmail.com"
           title="Enviar correo a Luis Gomez"
