Refactor experience section

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -8,9 +8,9 @@ const { id } = Astro.props
 
 <Section title="Experiencia" id={id} class="bg-[#EEE]">
   <div class="lg:py-8 px-4 lg:px-6 max-w-6xl mx-auto">
+    <h2 class="border-b-2 border-gray-300 text-2xl font-bold mb-3">Desarrollador Full-Stack</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-x-24 gap-y-8">
       <div class="flex flex-col gap-4 max-w-3xl">
-        <h2 class="text-2xl font-bold">Desarrollador Full-Stack</h2>
         <p class="text-base opacity-80">Zabud Technologies | 2019 - 2024</p>
         <ul class="list-disc pl-5">
           <li>
@@ -24,7 +24,7 @@ const { id } = Astro.props
           <li>Integración eficiente entre frontend y backend mediante consumo de APIs REST.</li>
           <li>
             Implementación de pruebas unitarias en aplicaciones Angular utilizando Karma y Jasmine
-            para asegurar calidad y estabilidad del código..
+            para asegurar calidad y estabilidad del código.
           </li>
           <li>
             Trabajo en equipos ágiles bajo metodologías SCRUM, aplicando buenas prácticas de
@@ -33,8 +33,8 @@ const { id } = Astro.props
         </ul>
       </div>
       <div>
-        <h2 class="text-xl font-semibold mb-8">
-          Algunos de los proyectos en los que participé como desarrollador
+        <h2 class="text-base font-semibold mb-6">
+          Algunos de los proyectos en los que participé
         </h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-4">
           <div class="relative group cursor-pointer" data-open-modal="modal-aldea">
