Refactor project section

--- a/src/assets/icons/CodeIcon.astro
+++ b/src/assets/icons/CodeIcon.astro
@@ -8,7 +8,8 @@
   stroke-width="1"
   stroke-linecap="round"
   stroke-linejoin="round"
-  class="icon icon-tabler icons-tabler-outline icon-tabler-code"
-  ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M7 8l-4 4l4 4"></path><path
-    d="M17 8l4 4l-4 4"></path><path d="M14 4l-4 16"></path></svg
+  class="icon icon-tabler icons-tabler-outline icon-tabler-folders"
+  ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
+    d="M9 3h3l2 2h5a2 2 0 0 1 2 2v7a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2v-9a2 2 0 0 1 2 -2"
+  ></path><path d="M17 16v2a2 2 0 0 1 -2 2h-10a2 2 0 0 1 -2 -2v-9a2 2 0 0 1 2 -2h2"></path></svg
 >
