--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -36,27 +36,25 @@ const { id } = Astro.props
           <ButtonLink
             href="https://github.com/luisgomezadev"
             title="GitHub Luis Gomez"
-            class="text-white bg-black"
           >
             <GitHub class="w-6 h-6" />
           </ButtonLink>
           <ButtonLink
             href="https://www.linkedin.com/in/luisgomezdev/"
             title="LinkedIn Luis Gomez"
-            class="text-white bg-black"
           >
             <LinkedIn class="w-6 h-6" />
           </ButtonLink>
           <ButtonLink
             href="mailto:luisgomez24g@gmail.com"
             title="Enviar correo a Luis Gomez"
-            class="text-white bg-black block md:hidden"
+            class="block md:hidden"
           >
             <EmailIcon class="w-6 h-6" />
           </ButtonLink>
           <ButtonLink
             title="Descargar CV de Luis Gomez"
-            class="bg-transparent border-2 border-black text-black px-4 block md:hidden"
+            class="px-4 block md:hidden"
             href="/files/CV_Luis_Gomez_2025.pdf"
           >
             <CvIcon color="#000" size={20} />
@@ -68,14 +66,14 @@ const { id } = Astro.props
         <ButtonLink
           href="mailto:luisgomez24g@gmail.com"
           title="Enviar correo a Luis Gomez"
-          class="text-white bg-black px-4"
+          class="px-4"
         >
-          <EmailIcon color="#FFF" size={20} />
+          <EmailIcon color="#000" size={20} />
           Contactar
         </ButtonLink>
         <ButtonLink
           title="Descargar CV de Luis Gomez"
-          class="bg-transparent border-2 border-black text-black px-4"
+          class="px-4"
           href="/files/CV_Luis_Gomez_2025.pdf"
         >
           <CvIcon color="#000" size={20} />
