--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,10 +7,10 @@ import Experience from '../components/Experience.astro'
 import Contact from '../components/Contact.astro'
 ---
 
-<Layout title="Luis Gomez Dev | Portafolio">
+<Layout title="Luis Gomez | Desarrollador Web Full-Stack">
   <Hero id="inicio" />
   <Experience id="experiencia" />
-  <Projects id="proyectos" />
+  <Projects id="portafolio" />
   <Skills id="habilidades" />
   <Contact id="contacto" />
 </Layout>
