--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -33,9 +33,9 @@ import MailIcon from '../assets/icons/MailIcon.astro'
         </a>
       </li>
       <li>
-        <a href="#proyectos" class="group relative flex gap-2 items-center">
+        <a href="#portafolio" class="group relative flex gap-2 items-center">
           <div class="hidden md:block"><CodeIcon /></div>
-          Proyectos
+          Portafolio
           <span
             class="absolute -bottom-1 left-1/2 w-0 h-0.5 bg-red-800 transition-all duration-300 group-hover:w-full group-hover:left-0"
           ></span>
@@ -66,7 +66,7 @@ import MailIcon from '../assets/icons/MailIcon.astro'
       class="fixed top-0 right-0 w-full h-screen bg-white/95 text-black flex flex-col items-center justify-center gap-8 text-2xl font-medium transform translate-x-full transition-transform duration-500 md:hidden z-40 backdrop-blur-3xl"
     >
       <a href="#experiencia" onclick="toggleMenu()">Experiencia</a>
-      <a href="#proyectos" onclick="toggleMenu()">Proyectos</a>
+      <a href="#portafolio" onclick="toggleMenu()">Portafolio</a>
       <a href="#habilidades" onclick="toggleMenu()">Habilidades</a>
       <a href="#contacto" onclick="toggleMenu()">Contacto</a>
     </div>
