--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,10 @@
 ---
+
 ---
 
-<section class="bg-[#111] py-12">
-  <footer class="flex justify-center max-w-6xl mx-auto items-center px-3 xl:px-0">
-    <p class="text-sm text-gray-200">
+<section class="bg-white pb-12">
+  <footer class="flex justify-center max-w-7xl mx-auto items-center px-3 xl:px-0">
+    <p class="text-sm text-gray-700">
       © {new Date().getFullYear()} Luis Gómez Dev.
     </p>
   </footer>
