--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -10,7 +10,7 @@ import MailIcon from '../assets/icons/MailIcon.astro'
   class="fixed top-0 left-0 w-full p-3 md:p-0 duration-300 z-30 transition-all backdrop-blur-3xl bg-transparent"
 >
   <nav
-    class="duration-300 mx-auto max-w-7xl w-full text-black flex items-center py-2 md:py-5 justify-between h-auto transition-all md:px-3"
+    class="duration-300 mx-auto max-w-7xl w-full text-black flex items-center py-2 md:py-5 justify-between h-auto transition-all md:px-4 lg:px-6"
   >
     <a
       href="#inicio"
@@ -28,7 +28,7 @@ import MailIcon from '../assets/icons/MailIcon.astro'
           <div class="hidden md:block"><ExperienceIcon /></div>
           Experiencia
           <span
-            class="absolute -bottom-1 left-1/2 w-0 h-0.5 bg-red-800 transition-all duration-300 group-hover:w-full group-hover:left-0"
+            class="absolute -bottom-1 left-1/2 w-0 h-0.5 bg-blue-800 transition-all duration-300 group-hover:w-full group-hover:left-0"
           ></span>
         </a>
       </li>
@@ -37,7 +37,7 @@ import MailIcon from '../assets/icons/MailIcon.astro'
           <div class="hidden md:block"><CodeIcon /></div>
           Portafolio
           <span
-            class="absolute -bottom-1 left-1/2 w-0 h-0.5 bg-red-800 transition-all duration-300 group-hover:w-full group-hover:left-0"
+            class="absolute -bottom-1 left-1/2 w-0 h-0.5 bg-blue-800 transition-all duration-300 group-hover:w-full group-hover:left-0"
           ></span>
         </a>
       </li>
@@ -46,7 +46,7 @@ import MailIcon from '../assets/icons/MailIcon.astro'
           <div class="hidden md:block"><SkillIcon /></div>
           Habilidades
           <span
-            class="absolute -bottom-1 left-1/2 w-0 h-0.5 bg-red-800 transition-all duration-300 group-hover:w-full group-hover:left-0"
+            class="absolute -bottom-1 left-1/2 w-0 h-0.5 bg-blue-800 transition-all duration-300 group-hover:w-full group-hover:left-0"
           ></span>
         </a>
       </li>
@@ -55,7 +55,7 @@ import MailIcon from '../assets/icons/MailIcon.astro'
           <div class="hidden md:block"><MailIcon /></div>
           Contacto
           <span
-            class="absolute -bottom-1 left-1/2 w-0 h-0.5 bg-red-800 transition-all duration-300 group-hover:w-full group-hover:left-0"
+            class="absolute -bottom-1 left-1/2 w-0 h-0.5 bg-blue-800 transition-all duration-300 group-hover:w-full group-hover:left-0"
           ></span>
         </a>
       </li>
@@ -63,7 +63,7 @@ import MailIcon from '../assets/icons/MailIcon.astro'
 
     <div
       id="mobileMenu"
-      class="fixed top-0 right-0 w-full h-screen bg-white/95 text-black flex flex-col items-center justify-center gap-8 text-2xl font-medium transform translate-x-full transition-transform duration-500 md:hidden z-40 backdrop-blur-3xl"
+      class="fixed top-0 right-0 w-full h-screen bg-white text-black flex flex-col items-center justify-center gap-12 text-4xl font-medium transform translate-x-full transition-transform duration-500 md:hidden z-40 backdrop-blur-3xl"
     >
       <a href="#experiencia" onclick="toggleMenu()">Experiencia</a>
       <a href="#portafolio" onclick="toggleMenu()">Portafolio</a>
