--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -7,7 +7,7 @@ const { id } = Astro.props
 ---
 
 <Section title="Experiencia" id={id} class="bg-[#EEE]">
-  <div class="lg:py-8 px-4 lg:px-6 max-w-6xl mx-auto">
+  <div class="lg:py-8 px-4 lg:px-6 max-w-7xl mx-auto">
     <h2 class="border-b-2 border-gray-300 text-2xl font-bold mb-3">Desarrollador Full-Stack</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-x-24 gap-y-8">
       <div class="flex flex-col gap-4 max-w-3xl">
@@ -33,9 +33,7 @@ const { id } = Astro.props
         </ul>
       </div>
       <div>
-        <h2 class="text-base font-semibold mb-6">
-          Algunos de los proyectos en los que participé
-        </h2>
+        <h2 class="text-base font-semibold mb-6">Algunos de los proyectos en los que participé</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-4">
           <div class="relative group cursor-pointer" data-open-modal="modal-aldea">
             <img
