--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,22 +13,28 @@ import ButtonLink from './shared/ButtonLink.astro'
 const { id } = Astro.props
 ---
 
-<section id={id} class="h-auto md:min-h-screen scroll-mt-16 bg-gray-100">
+<section
+  id={id}
+  class="h-auto md:min-h-screen scroll-mt-16 overflow-x-hidden transition-all duration-500 bg-gradient-to-br from-blue-50 via-white to-purple-50 text-gray-800"
+>
   <header
-    class="max-w-7xl mx-auto px-4 lg:px-6 py-12 grid md:grid-cols-2 gap-x-12 gap-y-10 items-center h-auto md:h-screen"
+    class="max-w-7xl mx-auto px-4 lg:px-6 py-20 md:py-32 gap-x-12 gap-y-10 items-center h-auto md:h-screen flex flex-col md:flex-row justify-between"
   >
-    <div class="flex flex-col gap-6 text-center md:text-left animate-fade-in-left">
+    <div class="flex flex-col gap-4 text-center md:text-left animate-fade-in-left">
       <div>
-        <span class="text-xl opacity-80 uppercase font-semibold">Hola, soy</span>
-        <h1 class="text-6xl lg:text-8xl font-bold text-red-800 tracking-tighter">Luis Gómez</h1>
+        <p class="text-lg md:mb-4 text-gray-600">Hola, mi nombre es</p>
+        <h1
+          class="text-4xl md:text-5xl lg:text-7xl font-bold md:mb-3 leading-20 md:leading-24 bg-gradient-to-r from-blue-600 via-purple-600 to-pink-600 bg-clip-text text-transparent"
+        >
+          Luis Gómez Arteaga
+        </h1>
       </div>
-      <h2 class="text-2xl lg:text-3xl font-semibold typing-text text-black">Desarrollador Web
-      </h2>
+      <h2 class="text-2xl lg:text-3xl font-semibold typing-text text-black">Desarrollador Web</h2>
       <p
         class="text-lg text-pretty text-gray-800 opacity-80 dark:text-black leading-relaxed max-w-lg"
       >
         Ingeniero de sistemas con más de cuatro años de experiencia en el diseño, desarrollo y
-        mantenimiento de aplicaciones web modernas.
+        mantenimiento de aplicaciones web.
       </p>
       <div class="flex items-center space-x-4 justify-center md:justify-start">
         <span class="text-gray-800 dark:text-black font-medium hidden md:block">Sígueme por:</span>
@@ -36,28 +42,30 @@ const { id } = Astro.props
           <ButtonLink
             href="https://github.com/luisgomezadev"
             title="GitHub Luis Gomez"
+            class="bg-gradient-to-r from-blue-600 to-purple-600"
           >
             <GitHub class="w-6 h-6" />
           </ButtonLink>
           <ButtonLink
             href="https://www.linkedin.com/in/luisgomezdev/"
             title="LinkedIn Luis Gomez"
+            class="bg-gradient-to-r from-blue-600 to-purple-600"
           >
             <LinkedIn class="w-6 h-6" />
           </ButtonLink>
           <ButtonLink
             href="mailto:luisgomez24g@gmail.com"
             title="Enviar correo a Luis Gomez"
-            class="block md:hidden"
+            class="block md:hidden bg-gradient-to-r from-blue-600 to-purple-600"
           >
             <EmailIcon class="w-6 h-6" />
           </ButtonLink>
           <ButtonLink
             title="Descargar CV de Luis Gomez"
-            class="px-4 block md:hidden"
+            class="px-4 block md:hidden bg-gradient-to-r from-blue-600 to-purple-600"
             href="/files/CV_Luis_Gomez_2025.pdf"
           >
-            <CvIcon color="#000" size={20} />
+            <CvIcon color="#FFF" size={20} />
             Descargar mi CV
           </ButtonLink>
         </div>
@@ -66,30 +74,33 @@ const { id } = Astro.props
         <ButtonLink
           href="mailto:luisgomez24g@gmail.com"
           title="Enviar correo a Luis Gomez"
-          class="px-4"
+          class="px-4 bg-gradient-to-r from-blue-600 to-purple-600"
         >
-          <EmailIcon color="#000" size={20} />
+          <EmailIcon color="#FFF" size={20} />
           Contactar
         </ButtonLink>
         <ButtonLink
           title="Descargar CV de Luis Gomez"
-          class="px-4"
+          class="px-4 bg-gray-300/50 text-blue-600"
+          textColor="text-blue-600"
           href="/files/CV_Luis_Gomez_2025.pdf"
         >
-          <CvIcon color="#000" size={20} />
+          <CvIcon color="#1E5CFC" size={20} />
           Descargar mi CV
         </ButtonLink>
       </div>
     </div>
     <div class="relative flex justify-center items-center">
-      <div class="relative bg-gray-100">
+      <div
+        class="relative rounded-full animate-fade-in-up overflow-hidden border-4 border-blue-600"
+      >
         <img
-          src="/images/perfil.webp"
+          src="/luis_perfil.webp"
           alt="Luis Gómez"
-          class="bg-gray-100 w-72 h-72 sm:w-96 sm:h-96 lg:w-[480px] lg:h-[480px] object-cover hover:-translate-y-2 transition-all duration-300"
+          class="bg-gray-100 w-72 h-72 sm:w-96 sm:h-96 lg:w-[420px] lg:h-[420px] object-cover grayscale"
         />
       </div>
-      <div
+      <!-- <div
         class="absolute top-6 left-8 sm:left-20 w-12 h-12 sm:w-16 sm:h-16 bg-white text-gray-800 border rounded-full drop-shadow-2xl shadow-lg shadow-gray-800 flex items-center justify-center hover:scale-110 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 animate-float group"
       >
         <span class="group-hover:text-red-700 transition-all duration-300"
@@ -116,7 +127,7 @@ const { id } = Astro.props
         <span class="group-hover:text-[#F7DF1E] transition-all duration-300"
           ><JavaScriptIcon class="w-6 h-6 sm:w-8 sm:h-8" /></span
         >
-      </div>
+      </div> -->
     </div>
   </header>
 </section>
