--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -59,11 +59,11 @@ const { id } = Astro.props
                   {project.link && (
                     <ButtonLink
                       title={`Ver repositorio de proyecto ${project.title}`}
-                      class="px-4 bg-gray-300/50 text-blue-600"
-                      textColor="text-blue-600"
+                      class="px-4 bg-gray-300/50"
+                      textColor="bg-gradient-to-r from-blue-600 via-purple-600 to-pink-600 bg-clip-text text-transparent"
                       href={project.link}
                     >
-                      <GitHub color="#1E5CFC" size={20} />
+                      <GitHub color="#8631FB" size={20} />
                       Ver código
                     </ButtonLink>
                   )}
